--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -1,3 +1,12 @@
 body {
   font-family: "游ゴシック", "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif;
 }
+
+a {
+  color: navy;
+  cursor: pointer;
+}
+
+a::visited {
+  color: maroon;
+}
